--- a/EFCore/ASP.NetCore/Blazor.WebAssembly/WebApi/appsettings.json
+++ b/EFCore/ASP.NetCore/Blazor.WebAssembly/WebApi/appsettings.json
@@ -1,33 +1,34 @@
 ﻿{
   "ConnectionStrings": {
-    "ConnectionString": "Integrated Security=SSPI;Pooling=false;MultipleActiveResultSets=true;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=WebAPI",
+    "ConnectionStringxxx": "XpoProvider=Postgres;Server=localhost;User ID=postgres;Password=1;Database=webapi;Encoding=WebAPI",
+    "ConnectionString": "Host=localhost;Database=webapi;Username=postgres;Password=1",
     "EasyTestConnectionString": "Integrated Security=SSPI;Pooling=false;MultipleActiveResultSets=true;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=WebAPIEasyTest"
   },
-  "Authentication": {
-    "Jwt": {
-       "Issuer": "My",
-       "Audience": "http://localhost:4200",
-       "IssuerSigningKey": "901f4513-c226-4017-8d97-5b329bdcb52a" // Generate and store the secret key here.
+    "Authentication": {
+      "Jwt": {
+        "Issuer": "My",
+        "Audience": "http://localhost:4200",
+        "IssuerSigningKey": "901f4513-c226-4017-8d97-5b329bdcb52a" // Generate and store the secret key here.
+      },
+      // fill the following settings from Azure portal https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-create-new-tenant
+      "AzureAd": {
+        "Instance": "https://login.microsoftonline.com/",
+        // Enter your tenant domain, for example, contoso.onmicrosoft.com
+        "Domain": "",
+        // Enter 'common', or 'organizations' or the Tenant Id obtained from the Azure portal. Select 'Endpoints' from the 'App registrations' blade and use the GUID in any of the URLs), for example, da41245a5-11b3-996c-00a8-4d99re19f292
+        "TenantId": "organizations",
+        // Enter the Client Id (application ID obtained from the Azure portal), for example, ba74781c2-53c2-442a-97c2-3d60re42f403
+        "ClientId": "[Configure ClientId in appsettings.json before use.]",
+        "CallbackPath": "/ms_auth"
+      }
     },
-    // fill the following settings from Azure portal https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-create-new-tenant
-    "AzureAd": {
-      "Instance": "https://login.microsoftonline.com/",
-      // Enter your tenant domain, for example, contoso.onmicrosoft.com
-      "Domain": "",
-      // Enter 'common', or 'organizations' or the Tenant Id obtained from the Azure portal. Select 'Endpoints' from the 'App registrations' blade and use the GUID in any of the URLs), for example, da41245a5-11b3-996c-00a8-4d99re19f292
-      "TenantId": "organizations",
-      // Enter the Client Id (application ID obtained from the Azure portal), for example, ba74781c2-53c2-442a-97c2-3d60re42f403
-      "ClientId": "[Configure ClientId in appsettings.json before use.]",
-      "CallbackPath": "/ms_auth"
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "DevExpress.ExpressApp": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "DevExpress.ExpressApp": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
