--- a/EFCore/MAUI/MAUI/MAUI.csproj
+++ b/EFCore/MAUI/MAUI/MAUI.csproj
@@ -1,13 +1,11 @@
-﻿
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net7.0-android;net7.0-ios</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<RootNamespace>MAUI</RootNamespace>
+		<RootNamespace>GPN</RootNamespace>
 
 		<!-- Display name -->
 		<ApplicationTitle>MAUI</ApplicationTitle>
@@ -22,6 +20,22 @@
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
     <UseInterpreter Condition="$(TargetFramework.Contains('-ios')) AND '$(Configuration)' == 'Release'">True</UseInterpreter>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-android|AnyCPU'">
+	  <ApplicationTitle>GPN</ApplicationTitle>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
+	  <ApplicationTitle>GPN</ApplicationTitle>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-android|AnyCPU'">
+	  <ApplicationTitle>GPN</ApplicationTitle>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
+	  <ApplicationTitle>GPN</ApplicationTitle>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -61,12 +75,21 @@
 
 	<ItemGroup>
 	  <None Remove="Platforms\Android\Resources\xml\provider_paths.xml" />
+	  <None Remove="Resources\Images\genting_logo.svg" />
 	</ItemGroup>
 
 
 	<ItemGroup>
     <PackageReference Include="DevExpress.Maui.CollectionView" Version="23.1.5" />
+    <PackageReference Include="DevExpress.Maui.DataGrid" Version="23.1.5" />
     <PackageReference Include="DevExpress.Maui.Editors" Version="23.1.5" />
     <PackageReference Include="DevExpress.Reporting.Core" Version="23.1.5" />
   </ItemGroup>
+
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\GridDataPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
 </Project>
